// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethodListItem matches snapshot 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  disabled={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#b4b4b528",
                "borderRadius": 22,
                "height": 44,
                "justifyContent": "center",
                "width": 44,
              },
              false,
            ]
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#131416",
                  "fontSize": 24,
                },
                undefined,
                {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#131416",
              "fontFamily": "Geist-Medium",
              "fontSize": 18,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Debit or Credit
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#66676a",
              "fontFamily": "Geist-Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          5 - 10 mins
        </Text>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`PaymentMethodListItem renders as selected when isSelected is true 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  disabled={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#b4b4b528",
                "borderRadius": 22,
                "height": 44,
                "justifyContent": "center",
                "width": 44,
              },
              {
                "backgroundColor": "#4459ff1a",
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#4459ff",
                  "fontSize": 24,
                },
                undefined,
                {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#131416",
              "fontFamily": "Geist-Medium",
              "fontSize": 18,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Debit or Credit
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#66676a",
              "fontFamily": "Geist-Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          5 - 10 mins
        </Text>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      />
    </View>
  </View>
  <View
    accessibilityRole="checkbox"
    accessible={true}
    style={
      {
        "backgroundColor": "#b4b4b528",
        "bottom": 0,
        "flexDirection": "row",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</TouchableOpacity>
`;
